test/conformance/chainsaw/cli/apply/apply-map-paramref/param.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: label-params
  namespace: default
data:
  replicas: "10"
