test/conformance/chainsaw/cli/apply/apply-map-paramref/resource.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
  labels:
    app: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test-container
        image: public.ecr.aws/docker/library/nginx
        ports:
        - containerPort: 80
